--- a/adm/style/acp_pcoi_body.html
+++ b/adm/style/acp_pcoi_body.html
@@ -1,20 +1,11 @@
-<!-- INCLUDE overall_header.html -->
+{% include 'overall_header.html' %}
 
 <h1>{{ lang('PCOI_TITLE') }}</h1>
 
-<form id="acp_board" method="post" action="{U_ACTION}">
+<form id="acp_board" method="post" action="{{ U_ACTION }}">
 
 	<fieldset>
 		<legend>{{ lang('SETTINGS') }}</legend>
-		<dl>
-			<dt>
-				<label for="pcoi_enable">{{ lang('PCOI_ENABLE') }}{{ lang('COLON') }}</label><br /><span>{{ lang('PCOI_ENABLE_EXPLAIN') }}</span>
-			</dt>
-			<dd>
-				<label><input type="radio" name="pcoi_enable" value="1"{% if PCOI_ENABLE %} checked{% endif %}> {{ lang('YES') }}</label>
-				<label><input type="radio" name="pcoi_enable" value="0"{% if not PCOI_ENABLE %} checked{% endif %}> {{ lang('NO') }}</label>
-			</dd>
-		</dl>
 		<dl>
 			<dt>
 				<label for="pcoi_enable">{{ lang('PCOI_NAVBAR') }}{{ lang('COLON') }}</label>
@@ -45,9 +36,9 @@
 	</fieldset>
 	<fieldset class="submit-buttons">
 		<input class="button1" type="submit" id="submit" name="submit" value="{L_SUBMIT}" />
-		{S_FORM_TOKEN}
+		{{ S_FORM_TOKEN }}
 	</fieldset>
 
 </form>
 
-<!-- INCLUDE overall_footer.html -->
+{% include 'overall_footer.html' %}
